--- a/src/scss/custom.css
+++ b/src/scss/custom.css
@@ -7585,10 +7585,6 @@ textarea.form-control-lg {
   --bs-border-opacity: 1;
 }
 
-.w-3 {
-  width: 3.125rem !important;
-}
-
 .w-25 {
   width: 25% !important;
 }
@@ -14611,10 +14607,6 @@ progress {
   --bs-border-opacity: 1;
 }
 
-.w-3 {
-  width: 3.125rem !important;
-}
-
 .w-25 {
   width: 25% !important;
 }
@@ -18995,8 +18987,175 @@ progress {
     display: none !important;
   }
 }
+.w-1_12 {
+  width: 8.3333333%;
+}
+
+.w-1_6 {
+  width: 16.666667%;
+}
+
+.w-1_5 {
+  width: 20%;
+}
+
+.w-1_3 {
+  width: 33.333333%;
+}
+
+.w-2_5 {
+  width: 40%;
+}
+
+.w-5_12 {
+  width: 41.666667%;
+}
+
+.w-7_12 {
+  width: 58.333333%;
+}
+
+.w-3_5 {
+  width: 60%;
+}
+
+.w-2_3 {
+  width: 66.666667%;
+}
+
+.w-4_5 {
+  width: 80%;
+}
+
+.w-5_6 {
+  width: 83.333333%;
+}
+
+.w-11_12 {
+  width: 91.666667%;
+}
+
 @layer utilities {
-  .w-12 {
+  .w-0 {
+    width: 0px;
+  }
+  .w-1 {
+    width: 0.25rem;
+  }
+  .w-2 {
+    width: 0.5rem;
+  }
+  .w-3 {
+    width: 1rem;
+  }
+  .w-4 {
+    width: 1.5rem;
+  }
+  .w-5 {
+    width: 2rem;
+  }
+  .w-6 {
+    width: 2.5rem;
+  }
+  .w-7 {
     width: 3rem;
   }
+  .w-8 {
+    width: 3.5rem;
+  }
+  .w-9 {
+    width: 4rem;
+  }
+  .w-10 {
+    width: 5rem;
+  }
+  .w-11 {
+    width: 6rem;
+  }
+  .w-12 {
+    width: 7rem;
+  }
+  .w-13 {
+    width: 8rem;
+  }
+  .w-14 {
+    width: 9rem;
+  }
+  .w-15 {
+    width: 10rem;
+  }
+  .w-16 {
+    width: 11rem;
+  }
+  .w-17 {
+    width: 12rem;
+  }
+  .w-18 {
+    width: 13rem;
+  }
+  .w-19 {
+    width: 14rem;
+  }
+  .w-20 {
+    width: 15rem;
+  }
+  .w-21 {
+    width: 16rem;
+  }
+  .w-22 {
+    width: 18rem;
+  }
+  .w-23 {
+    width: 20rem;
+  }
+  .w-24 {
+    width: 24rem;
+  }
+}
+.w-1_12 {
+  width: 8.3333333%;
+}
+
+.w-1_6 {
+  width: 16.666667%;
+}
+
+.w-1_5 {
+  width: 20%;
+}
+
+.w-1_3 {
+  width: 33.333333%;
+}
+
+.w-2_5 {
+  width: 40%;
+}
+
+.w-5_12 {
+  width: 41.666667%;
+}
+
+.w-7_12 {
+  width: 58.333333%;
+}
+
+.w-3_5 {
+  width: 60%;
+}
+
+.w-2_3 {
+  width: 66.666667%;
+}
+
+.w-4_5 {
+  width: 80%;
+}
+
+.w-5_6 {
+  width: 83.333333%;
+}
+
+.w-11_12 {
+  width: 91.666667%;
 }/*# sourceMappingURL=custom.css.map */
