--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -14,7 +14,9 @@
 @import "../../node_modules/bootstrap/scss/helpers";
 @import "../../node_modules/bootstrap/scss/utilities/api";
 @import "./utilities/widths";
+@import "./utilities/heights";
 @import "./utilities/marginPadding";
+@import "./utilities/colors";
 
 
 
