--- a/src/scss/utilities/_widths.scss
+++ b/src/scss/utilities/_widths.scss
@@ -1,4 +1,37 @@
 $widths: (
+  /* 2px  */ 0_5: 0.125rem,
+  /* 4px  */ 1: 0.25rem,
+  /* 6px  */ 1_5_rem: 0.375rem,
+  /* 8px  */ 2: 0.5rem,
+  /* 10px  */ 2_25: 0.625rem,
+  /* 12px */ 2_5_rem: 0.75rem,
+  /* 14px */ 2_75: 0.875rem,
+  /* 16px  */ 3: 1rem,
+  /* 20px */ 3_5_rem: 1.25rem,
+  /* 24px  */ 4: 1.5rem,
+  /* 28px */ 4_2: 1.75rem,
+  /* 32px */ 4_4: 2rem,
+  /* 36px */ 4_5_rem: 2.25rem,
+  /* 40px */ 4_6: 2.5rem,
+  /* 44px */ 4_8: 2.75rem,
+  /* 48px  */ 5: 3rem,
+  /* 56px */ 5_5: 3.5rem,
+  /* 64px */ 6: 4rem,
+  /* 80px */ 7: 5rem,
+  /* 96px */ 8: 6rem,
+  /* 112px */ 9: 7rem,
+  /* 128px */ 10: 8rem,
+  /* 144px */ 11: 9rem,
+  /* 160px */ 12: 10rem,
+  /* 176px */ 13: 11rem,
+  /* 192px */ 14: 12rem,
+  /* 208px */ 15: 13rem,
+  /* 224px */ 16: 14rem,
+  /* 240px */ 17: 15rem,
+  /* 256px */ 18: 16rem,
+  /* 288px */ 19: 18rem,
+  /* 320px */ 20: 20rem,
+  /* 384px */ 21: 24rem,
   1_12: 8.3333333%,
   1_6: 16.666667%,
   1_5: 20%,
@@ -23,80 +56,3 @@ $widths: (
   }
 }
 
-@layer utilities {
-  .w-0 {
-    width: 0px;
-  }
-  .w-1 {
-    width: 0.25rem;
-  }
-  .w-2 {
-    width: 0.5rem;
-  }
-  .w-3 {
-    width: 1rem;
-  }
-  .w-4 {
-    width: 1.5rem;
-  }
-  .w-5 {
-    width: 2rem;
-  }
-  .w-6 {
-    width: 2.5rem;
-  }
-  .w-7 {
-    width: 3rem;
-  }
-  .w-8 {
-    width: 3.5rem;
-  }
-  .w-9 {
-    width: 4rem;
-  }
-  .w-10 {
-    width: 5rem;
-  }
-  .w-11 {
-    width: 6rem;
-  }
-  .w-12 {
-    width: 7rem;
-  }
-  .w-13 {
-    width: 8rem;
-  }
-  .w-14 {
-    width: 9rem;
-  }
-  .w-15 {
-    width: 10rem;
-  }
-  .w-16 {
-    width: 11rem;
-  }
-  .w-17 {
-    width: 12rem;
-  }
-  .w-18 {
-    width: 13rem;
-  }
-  .w-19 {
-    width: 14rem;
-  }
-  .w-20 {
-    width: 15rem;
-  }
-  .w-21 {
-    width: 16rem;
-  }
-  .w-22 {
-    width: 18rem;
-  }
-  .w-23 {
-    width: 20rem;
-  }
-  .w-24 {
-    width: 24rem;
-  }
-}
