--- a/src/scss/custom.css
+++ b/src/scss/custom.css
@@ -21029,4 +21029,60 @@ progress {
 
 .text-yellow-500 {
   color: #ffc107;
+}
+
+.fs-text_xs {
+  font-size: 0.75rem;
+}
+
+.fs-text_sm {
+  font-size: 0.875rem;
+}
+
+.fs-text_base {
+  font-size: 1rem;
+}
+
+.fs-text_lg {
+  font-size: 1.125rem;
+}
+
+.fs-text_xl {
+  font-size: 1.25rem;
+}
+
+.fs-text_2xl {
+  font-size: 1.5rem;
+}
+
+.fs-text_3xl {
+  font-size: 1.875rem;
+}
+
+.fs-text_4xl {
+  font-size: 2.25rem;
+}
+
+.fs-text_5xl {
+  font-size: 3rem;
+}
+
+.fs-text_6xl {
+  font-size: 3.75rem;
+}
+
+.fs-text_7xl {
+  font-size: 4.5rem;
+}
+
+.fs-text_8xl {
+  font-size: 6rem;
+}
+
+.fs-text_9xl {
+  font-size: 8rem;
+}
+
+.shadow-shadowYellow {
+  box-shadow: 0em 0em 0.4em 0.44em rgb(255, 255, 0);
 }/*# sourceMappingURL=custom.css.map */
