--- a/src/scss/utilities/_colors.scss
+++ b/src/scss/utilities/_colors.scss
@@ -1,5 +1,5 @@
 $theme-colors: (
-    "yellow" : #ffff00
+  "yellow" : #ffff00
 );
 
 @mixin apply-color($color) {
@@ -7,6 +7,10 @@ $theme-colors: (
   }
   
   @each $color, $value in $theme-colors {
+    .swiper-button-next.text-#{$color},
+    .swiper-button-prev.text-#{$color} {
+      @include apply-color($color);
+    }
     .text-#{$color} {
       @include apply-color($color);
     }
