--- a/src/scss/custom.css
+++ b/src/scss/custom.css
@@ -18987,360 +18987,810 @@ progress {
     display: none !important;
   }
 }
+.swiper-button-next.w-0_5,
+.swiper-button-prev.w-0_5 {
+  width: 0.125rem;
+}
+
 .w-0_5 {
   width: 0.125rem;
+}
+
+.swiper-button-next.w-1,
+.swiper-button-prev.w-1 {
+  width: 0.25rem;
 }
 
 .w-1 {
   width: 0.25rem;
 }
 
+.swiper-button-next.w-1_5_rem,
+.swiper-button-prev.w-1_5_rem {
+  width: 0.375rem;
+}
+
 .w-1_5_rem {
   width: 0.375rem;
+}
+
+.swiper-button-next.w-2,
+.swiper-button-prev.w-2 {
+  width: 0.5rem;
 }
 
 .w-2 {
   width: 0.5rem;
 }
 
+.swiper-button-next.w-2_25,
+.swiper-button-prev.w-2_25 {
+  width: 0.625rem;
+}
+
 .w-2_25 {
   width: 0.625rem;
+}
+
+.swiper-button-next.w-2_5_rem,
+.swiper-button-prev.w-2_5_rem {
+  width: 0.75rem;
 }
 
 .w-2_5_rem {
   width: 0.75rem;
 }
 
+.swiper-button-next.w-2_75,
+.swiper-button-prev.w-2_75 {
+  width: 0.875rem;
+}
+
 .w-2_75 {
   width: 0.875rem;
+}
+
+.swiper-button-next.w-3,
+.swiper-button-prev.w-3 {
+  width: 1rem;
 }
 
 .w-3 {
   width: 1rem;
 }
 
+.swiper-button-next.w-3_5_rem,
+.swiper-button-prev.w-3_5_rem {
+  width: 1.25rem;
+}
+
 .w-3_5_rem {
   width: 1.25rem;
+}
+
+.swiper-button-next.w-4,
+.swiper-button-prev.w-4 {
+  width: 1.5rem;
 }
 
 .w-4 {
   width: 1.5rem;
 }
 
+.swiper-button-next.w-4_2,
+.swiper-button-prev.w-4_2 {
+  width: 1.75rem;
+}
+
 .w-4_2 {
   width: 1.75rem;
+}
+
+.swiper-button-next.w-4_4,
+.swiper-button-prev.w-4_4 {
+  width: 2rem;
 }
 
 .w-4_4 {
   width: 2rem;
 }
 
+.swiper-button-next.w-4_5_rem,
+.swiper-button-prev.w-4_5_rem {
+  width: 2.25rem;
+}
+
 .w-4_5_rem {
   width: 2.25rem;
+}
+
+.swiper-button-next.w-4_6,
+.swiper-button-prev.w-4_6 {
+  width: 2.5rem;
 }
 
 .w-4_6 {
   width: 2.5rem;
 }
 
+.swiper-button-next.w-4_8,
+.swiper-button-prev.w-4_8 {
+  width: 2.75rem;
+}
+
 .w-4_8 {
   width: 2.75rem;
+}
+
+.swiper-button-next.w-5,
+.swiper-button-prev.w-5 {
+  width: 3rem;
 }
 
 .w-5 {
   width: 3rem;
 }
 
+.swiper-button-next.w-5_5,
+.swiper-button-prev.w-5_5 {
+  width: 3.5rem;
+}
+
 .w-5_5 {
   width: 3.5rem;
+}
+
+.swiper-button-next.w-6,
+.swiper-button-prev.w-6 {
+  width: 4rem;
 }
 
 .w-6 {
   width: 4rem;
 }
 
+.swiper-button-next.w-7,
+.swiper-button-prev.w-7 {
+  width: 5rem;
+}
+
 .w-7 {
   width: 5rem;
+}
+
+.swiper-button-next.w-8,
+.swiper-button-prev.w-8 {
+  width: 6rem;
 }
 
 .w-8 {
   width: 6rem;
 }
 
+.swiper-button-next.w-9,
+.swiper-button-prev.w-9 {
+  width: 7rem;
+}
+
 .w-9 {
   width: 7rem;
+}
+
+.swiper-button-next.w-10,
+.swiper-button-prev.w-10 {
+  width: 8rem;
 }
 
 .w-10 {
   width: 8rem;
 }
 
+.swiper-button-next.w-11,
+.swiper-button-prev.w-11 {
+  width: 9rem;
+}
+
 .w-11 {
   width: 9rem;
+}
+
+.swiper-button-next.w-12,
+.swiper-button-prev.w-12 {
+  width: 10rem;
 }
 
 .w-12 {
   width: 10rem;
 }
 
+.swiper-button-next.w-13,
+.swiper-button-prev.w-13 {
+  width: 11rem;
+}
+
 .w-13 {
   width: 11rem;
+}
+
+.swiper-button-next.w-14,
+.swiper-button-prev.w-14 {
+  width: 12rem;
 }
 
 .w-14 {
   width: 12rem;
 }
 
+.swiper-button-next.w-15,
+.swiper-button-prev.w-15 {
+  width: 13rem;
+}
+
 .w-15 {
   width: 13rem;
+}
+
+.swiper-button-next.w-16,
+.swiper-button-prev.w-16 {
+  width: 14rem;
 }
 
 .w-16 {
   width: 14rem;
 }
 
+.swiper-button-next.w-17,
+.swiper-button-prev.w-17 {
+  width: 15rem;
+}
+
 .w-17 {
   width: 15rem;
+}
+
+.swiper-button-next.w-18,
+.swiper-button-prev.w-18 {
+  width: 16rem;
 }
 
 .w-18 {
   width: 16rem;
 }
 
+.swiper-button-next.w-19,
+.swiper-button-prev.w-19 {
+  width: 18rem;
+}
+
 .w-19 {
   width: 18rem;
+}
+
+.swiper-button-next.w-20,
+.swiper-button-prev.w-20 {
+  width: 20rem;
 }
 
 .w-20 {
   width: 20rem;
 }
 
+.swiper-button-next.w-21,
+.swiper-button-prev.w-21 {
+  width: 24rem;
+}
+
 .w-21 {
   width: 24rem;
+}
+
+.swiper-button-next.w-1_12,
+.swiper-button-prev.w-1_12 {
+  width: 8.3333333%;
 }
 
 .w-1_12 {
   width: 8.3333333%;
 }
 
+.swiper-button-next.w-1_6,
+.swiper-button-prev.w-1_6 {
+  width: 16.666667%;
+}
+
 .w-1_6 {
   width: 16.666667%;
+}
+
+.swiper-button-next.w-1_5,
+.swiper-button-prev.w-1_5 {
+  width: 20%;
 }
 
 .w-1_5 {
   width: 20%;
 }
 
+.swiper-button-next.w-1_3,
+.swiper-button-prev.w-1_3 {
+  width: 33.333333%;
+}
+
 .w-1_3 {
   width: 33.333333%;
+}
+
+.swiper-button-next.w-2_5,
+.swiper-button-prev.w-2_5 {
+  width: 40%;
 }
 
 .w-2_5 {
   width: 40%;
 }
 
+.swiper-button-next.w-5_12,
+.swiper-button-prev.w-5_12 {
+  width: 41.666667%;
+}
+
 .w-5_12 {
   width: 41.666667%;
+}
+
+.swiper-button-next.w-7_12,
+.swiper-button-prev.w-7_12 {
+  width: 58.333333%;
 }
 
 .w-7_12 {
   width: 58.333333%;
 }
 
+.swiper-button-next.w-3_5,
+.swiper-button-prev.w-3_5 {
+  width: 60%;
+}
+
 .w-3_5 {
   width: 60%;
+}
+
+.swiper-button-next.w-2_3,
+.swiper-button-prev.w-2_3 {
+  width: 66.666667%;
 }
 
 .w-2_3 {
   width: 66.666667%;
 }
 
+.swiper-button-next.w-4_5,
+.swiper-button-prev.w-4_5 {
+  width: 80%;
+}
+
 .w-4_5 {
   width: 80%;
+}
+
+.swiper-button-next.w-5_6,
+.swiper-button-prev.w-5_6 {
+  width: 83.333333%;
 }
 
 .w-5_6 {
   width: 83.333333%;
 }
 
+.swiper-button-next.w-11_12,
+.swiper-button-prev.w-11_12 {
+  width: 91.666667%;
+}
+
 .w-11_12 {
   width: 91.666667%;
+}
+
+.swiper-button-next.h-0_5,
+.swiper-button-prev.h-0_5 {
+  height: 0.125rem;
 }
 
 .h-0_5 {
   height: 0.125rem;
 }
 
+.swiper-button-next.h-1,
+.swiper-button-prev.h-1 {
+  height: 0.25rem;
+}
+
 .h-1 {
   height: 0.25rem;
+}
+
+.swiper-button-next.h-1_5_rem,
+.swiper-button-prev.h-1_5_rem {
+  height: 0.375rem;
 }
 
 .h-1_5_rem {
   height: 0.375rem;
 }
 
+.swiper-button-next.h-2,
+.swiper-button-prev.h-2 {
+  height: 0.5rem;
+}
+
 .h-2 {
   height: 0.5rem;
+}
+
+.swiper-button-next.h-2_25,
+.swiper-button-prev.h-2_25 {
+  height: 0.625rem;
 }
 
 .h-2_25 {
   height: 0.625rem;
 }
 
+.swiper-button-next.h-2_5_rem,
+.swiper-button-prev.h-2_5_rem {
+  height: 0.75rem;
+}
+
 .h-2_5_rem {
   height: 0.75rem;
+}
+
+.swiper-button-next.h-2_75,
+.swiper-button-prev.h-2_75 {
+  height: 0.875rem;
 }
 
 .h-2_75 {
   height: 0.875rem;
 }
 
+.swiper-button-next.h-3,
+.swiper-button-prev.h-3 {
+  height: 1rem;
+}
+
 .h-3 {
   height: 1rem;
+}
+
+.swiper-button-next.h-3_5_rem,
+.swiper-button-prev.h-3_5_rem {
+  height: 1.25rem;
 }
 
 .h-3_5_rem {
   height: 1.25rem;
 }
 
+.swiper-button-next.h-4,
+.swiper-button-prev.h-4 {
+  height: 1.5rem;
+}
+
 .h-4 {
   height: 1.5rem;
+}
+
+.swiper-button-next.h-4_2,
+.swiper-button-prev.h-4_2 {
+  height: 1.75rem;
 }
 
 .h-4_2 {
   height: 1.75rem;
 }
 
+.swiper-button-next.h-4_4,
+.swiper-button-prev.h-4_4 {
+  height: 2rem;
+}
+
 .h-4_4 {
   height: 2rem;
+}
+
+.swiper-button-next.h-4_5_rem,
+.swiper-button-prev.h-4_5_rem {
+  height: 2.25rem;
 }
 
 .h-4_5_rem {
   height: 2.25rem;
 }
 
+.swiper-button-next.h-4_6,
+.swiper-button-prev.h-4_6 {
+  height: 2.5rem;
+}
+
 .h-4_6 {
   height: 2.5rem;
+}
+
+.swiper-button-next.h-4_8,
+.swiper-button-prev.h-4_8 {
+  height: 2.75rem;
 }
 
 .h-4_8 {
   height: 2.75rem;
 }
 
+.swiper-button-next.h-5,
+.swiper-button-prev.h-5 {
+  height: 3rem;
+}
+
 .h-5 {
   height: 3rem;
+}
+
+.swiper-button-next.h-5_5,
+.swiper-button-prev.h-5_5 {
+  height: 3.5rem;
 }
 
 .h-5_5 {
   height: 3.5rem;
 }
 
+.swiper-button-next.h-6,
+.swiper-button-prev.h-6 {
+  height: 4rem;
+}
+
 .h-6 {
   height: 4rem;
+}
+
+.swiper-button-next.h-7,
+.swiper-button-prev.h-7 {
+  height: 5rem;
 }
 
 .h-7 {
   height: 5rem;
 }
 
+.swiper-button-next.h-8,
+.swiper-button-prev.h-8 {
+  height: 6rem;
+}
+
 .h-8 {
   height: 6rem;
+}
+
+.swiper-button-next.h-9,
+.swiper-button-prev.h-9 {
+  height: 7rem;
 }
 
 .h-9 {
   height: 7rem;
 }
 
+.swiper-button-next.h-10,
+.swiper-button-prev.h-10 {
+  height: 8rem;
+}
+
 .h-10 {
   height: 8rem;
+}
+
+.swiper-button-next.h-11,
+.swiper-button-prev.h-11 {
+  height: 9rem;
 }
 
 .h-11 {
   height: 9rem;
 }
 
+.swiper-button-next.h-12,
+.swiper-button-prev.h-12 {
+  height: 10rem;
+}
+
 .h-12 {
   height: 10rem;
+}
+
+.swiper-button-next.h-13,
+.swiper-button-prev.h-13 {
+  height: 11rem;
 }
 
 .h-13 {
   height: 11rem;
 }
 
+.swiper-button-next.h-14,
+.swiper-button-prev.h-14 {
+  height: 12rem;
+}
+
 .h-14 {
   height: 12rem;
+}
+
+.swiper-button-next.h-15,
+.swiper-button-prev.h-15 {
+  height: 13rem;
 }
 
 .h-15 {
   height: 13rem;
 }
 
+.swiper-button-next.h-16,
+.swiper-button-prev.h-16 {
+  height: 14rem;
+}
+
 .h-16 {
   height: 14rem;
+}
+
+.swiper-button-next.h-17,
+.swiper-button-prev.h-17 {
+  height: 15rem;
 }
 
 .h-17 {
   height: 15rem;
 }
 
+.swiper-button-next.h-18,
+.swiper-button-prev.h-18 {
+  height: 16rem;
+}
+
 .h-18 {
   height: 16rem;
+}
+
+.swiper-button-next.h-19,
+.swiper-button-prev.h-19 {
+  height: 18rem;
 }
 
 .h-19 {
   height: 18rem;
 }
 
+.swiper-button-next.h-20,
+.swiper-button-prev.h-20 {
+  height: 20rem;
+}
+
 .h-20 {
   height: 20rem;
+}
+
+.swiper-button-next.h-21,
+.swiper-button-prev.h-21 {
+  height: 24rem;
 }
 
 .h-21 {
   height: 24rem;
 }
 
+.swiper-button-next.h-1_12,
+.swiper-button-prev.h-1_12 {
+  height: 8.3333333%;
+}
+
 .h-1_12 {
   height: 8.3333333%;
+}
+
+.swiper-button-next.h-1_6,
+.swiper-button-prev.h-1_6 {
+  height: 16.666667%;
 }
 
 .h-1_6 {
   height: 16.666667%;
 }
 
+.swiper-button-next.h-1_5,
+.swiper-button-prev.h-1_5 {
+  height: 20%;
+}
+
 .h-1_5 {
   height: 20%;
+}
+
+.swiper-button-next.h-1_3,
+.swiper-button-prev.h-1_3 {
+  height: 33.333333%;
 }
 
 .h-1_3 {
   height: 33.333333%;
 }
 
+.swiper-button-next.h-2_5,
+.swiper-button-prev.h-2_5 {
+  height: 40%;
+}
+
 .h-2_5 {
   height: 40%;
+}
+
+.swiper-button-next.h-5_12,
+.swiper-button-prev.h-5_12 {
+  height: 41.666667%;
 }
 
 .h-5_12 {
   height: 41.666667%;
 }
 
+.swiper-button-next.h-7_12,
+.swiper-button-prev.h-7_12 {
+  height: 58.333333%;
+}
+
 .h-7_12 {
   height: 58.333333%;
+}
+
+.swiper-button-next.h-3_5,
+.swiper-button-prev.h-3_5 {
+  height: 60%;
 }
 
 .h-3_5 {
   height: 60%;
 }
 
+.swiper-button-next.h-2_3,
+.swiper-button-prev.h-2_3 {
+  height: 66.666667%;
+}
+
 .h-2_3 {
   height: 66.666667%;
+}
+
+.swiper-button-next.h-4_5,
+.swiper-button-prev.h-4_5 {
+  height: 80%;
 }
 
 .h-4_5 {
   height: 80%;
 }
 
+.swiper-button-next.h-5_6,
+.swiper-button-prev.h-5_6 {
+  height: 83.333333%;
+}
+
 .h-5_6 {
   height: 83.333333%;
+}
+
+.swiper-button-next.h-11_12,
+.swiper-button-prev.h-11_12 {
+  height: 91.666667%;
 }
 
 .h-11_12 {
@@ -23108,52 +23558,117 @@ progress {
   color: #ffff00;
 }
 
+.swiper-button-next.fs-text_xs,
+.swiper-button-prev.fs-text_xs {
+  font-size: 0.75rem;
+}
+
 .fs-text_xs {
   font-size: 0.75rem;
+}
+
+.swiper-button-next.fs-text_sm,
+.swiper-button-prev.fs-text_sm {
+  font-size: 0.875rem;
 }
 
 .fs-text_sm {
   font-size: 0.875rem;
 }
 
+.swiper-button-next.fs-text_base,
+.swiper-button-prev.fs-text_base {
+  font-size: 1rem;
+}
+
 .fs-text_base {
   font-size: 1rem;
+}
+
+.swiper-button-next.fs-text_lg,
+.swiper-button-prev.fs-text_lg {
+  font-size: 1.125rem;
 }
 
 .fs-text_lg {
   font-size: 1.125rem;
 }
 
+.swiper-button-next.fs-text_xl,
+.swiper-button-prev.fs-text_xl {
+  font-size: 1.25rem;
+}
+
 .fs-text_xl {
   font-size: 1.25rem;
+}
+
+.swiper-button-next.fs-text_2xl,
+.swiper-button-prev.fs-text_2xl {
+  font-size: 1.5rem;
 }
 
 .fs-text_2xl {
   font-size: 1.5rem;
 }
 
+.swiper-button-next.fs-text_3xl,
+.swiper-button-prev.fs-text_3xl {
+  font-size: 1.875rem;
+}
+
 .fs-text_3xl {
   font-size: 1.875rem;
+}
+
+.swiper-button-next.fs-text_4xl,
+.swiper-button-prev.fs-text_4xl {
+  font-size: 2.25rem;
 }
 
 .fs-text_4xl {
   font-size: 2.25rem;
 }
 
+.swiper-button-next.fs-text_5xl,
+.swiper-button-prev.fs-text_5xl {
+  font-size: 3rem;
+}
+
 .fs-text_5xl {
   font-size: 3rem;
+}
+
+.swiper-button-next.fs-text_6xl,
+.swiper-button-prev.fs-text_6xl {
+  font-size: 3.75rem;
 }
 
 .fs-text_6xl {
   font-size: 3.75rem;
 }
 
+.swiper-button-next.fs-text_7xl,
+.swiper-button-prev.fs-text_7xl {
+  font-size: 4.5rem;
+}
+
 .fs-text_7xl {
   font-size: 4.5rem;
 }
 
+.swiper-button-next.fs-text_8xl,
+.swiper-button-prev.fs-text_8xl {
+  font-size: 6rem;
+}
+
 .fs-text_8xl {
   font-size: 6rem;
+}
+
+.swiper-button-next.fs-text_9xl,
+.swiper-button-prev.fs-text_9xl {
+  font-size: 8rem;
 }
 
 .fs-text_9xl {
